[gd_scene load_steps=10 format=2]

[ext_resource path="res://0 - General/Sprites/Oficiales/channels4_banner.jpg" type="Texture" id=1]
[ext_resource path="res://0 - General/Scripts/MainGame.gd" type="Script" id=2]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/PepeyKuro.webp" type="Texture" id=3]
[ext_resource path="res://0 - General/Scenes/SettingsScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://0 - General/Themes/Normal.tres" type="Theme" id=5]
[ext_resource path="res://0 - General/Scenes/Splash.tscn" type="PackedScene" id=6]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/UmaruEnLlamas.webp" type="Texture" id=9]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/UmaruUmaru.webp" type="Texture" id=11]
[ext_resource path="res://0 - General/Sprites/Oficiales/UmaruVerse/Normachan.webp" type="Texture" id=13]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 360.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 56, 998 )

[node name="Cabecera" type="TextureRect" parent="."]
anchor_right = 1.0
margin_right = 4.0
margin_bottom = 112.0
rect_scale = Vector2( 0.993037, 1 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1

[node name="Ohayo" type="Label" parent="."]
margin_top = 114.0
margin_right = 720.0
margin_bottom = 488.0
text = "Ohayo minna-san!!
Bienvenidos al UmaruVerse
Yo soy Umaru y en este videojuego..."
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="UmaruVerse" type="HBoxContainer" parent="."]
margin_left = 98.0
margin_top = 476.0
margin_right = 622.0
margin_bottom = 604.0
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="UmaruVerse"]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 13 )

[node name="TextureRect3" type="TextureRect" parent="UmaruVerse"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="UmaruVerse"]
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 9 )

[node name="TextureRect10" type="TextureRect" parent="UmaruVerse"]
margin_left = 396.0
margin_right = 524.0
margin_bottom = 128.0
texture = ExtResource( 11 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -350.0
margin_right = -30.0
size_flags_vertical = 4
custom_constants/separation = 30

[node name="CatchBtn" type="Button" parent="Menu"]
margin_right = 660.0
margin_bottom = 57.0
text = "CATCH MANGA"

[node name="FindPartnerBtn" type="Button" parent="Menu"]
margin_top = 87.0
margin_right = 660.0
margin_bottom = 144.0
text = "BUSCA a PEPIS"

[node name="FlappyMoneyBtn" type="Button" parent="Menu"]
margin_top = 174.0
margin_right = 660.0
margin_bottom = 231.0
text = "FLAPPY MONEY"

[node name="ArcanoidBtn" type="Button" parent="Menu"]
visible = false
margin_top = 174.0
margin_right = 660.0
margin_bottom = 231.0
size_flags_horizontal = 3
text = "ARCANOID"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 261.0
margin_right = 660.0
margin_bottom = 318.0

[node name="SettingsBtn" type="Button" parent="Menu/HBoxContainer"]
margin_right = 328.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "Opciones"

[node name="CreditsBtn" type="Button" parent="Menu/HBoxContainer"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 57.0
size_flags_horizontal = 3
text = "Cr√©ditos"

[node name="QuitBtn" type="Button" parent="Menu"]
visible = false
margin_top = 308.0
margin_right = 667.0
margin_bottom = 355.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SALIR"

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]

[node name="Splash" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Menu/CatchBtn" to="." method="_on_CatchBtn_pressed"]
[connection signal="pressed" from="Menu/FindPartnerBtn" to="." method="_on_FindPartnerBtn_pressed"]
[connection signal="pressed" from="Menu/FlappyMoneyBtn" to="." method="_on_FlappyMoneyBtn_pressed"]
[connection signal="pressed" from="Menu/ArcanoidBtn" to="." method="_on_ArcanoidBtn_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/CreditsBtn" to="." method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
